        confusion with the command tool.
      * The `Interrupt' button is now named `Break', to associate the
	concept with `Breakpoints'
      * The `Break ()' and `Clear ()' buttons are now named `Break at
	()' and `Clear at ()', for further clarity.
      * The `Dereference' button is now named `Display *', for
	further clarity.

    Changes in configuration and building:
    - Regular expressions now use the POSIX.2 standard regcomp/regexec
      interface.  The slower interface is compensated by smarter calls.
    - DDD configuration now generally attempts to link with native system
      libraries wherever possible.  GNU termcap and librx are used
      only if the system does not provide them.  This results in
      smaller and (hopefully) safer DDD executables.
    - Patches for AIX xlC C++ compiler (and probably others) included.
      Thanks to Jacek Holeczek <holeczek@clri6f.gsi.de>.
    - DDD now compiles and runs unchanged with LessTif, a free Motif
      clone under construction.  Note that `runs' is relative: As of
      LessTif 0.50, DDD is still far from being usable.  This will
      change as LessTif evolves.

    Several bug fixes, including:
    - Improved directory support.  Sources and executables can reside
      in several different directories.
    - Several TTY problems fixed.  Switching between execution window 
      and debugger console should work fine now; the execution window
      can be opened, closed and re-opened without DDD crashing or
      hanging.
    - Editor problems fixed.  Invoking a source editor via `Edit'
      should work fine now.
    - The rubber band outline no more clutters the data display.
    - No more endless scrolling when glyphs are enabled.  Scrolling is
      slightly faster, too.
    - On HP-UX, the `@' character is no more discarded from GDB input.
    - On Solaris 2.x, annoying DBX warnings like `dbx: -r option only
      recognized for C++' are silently ignored.