@@ -32,6 +32,9 @@ DDD 1.5 (in development)
 	()' and `Clear at ()', for further clarity.
       * The `Dereference' button is now named `Display *', for
 	further clarity.
+    - The `Save Options on Exit' function has been removed, as it
+      also saved options given upon DDD invocation like `--dbx' or
+      `--exec-window'.  Options must now always be saved explicitly.
 
     Changes in configuration and building:
     - Regular expressions now use the POSIX.2 standard regcomp/regexec
@@ -64,6 +67,8 @@ DDD 1.5 (in development)
       recognized for C++' are silently ignored.
     - You can now specify the location of own VSL libraries via the
       `vslPath' resource.
+    - The `--attach' and `--separate' options now work; they are no
+      more overridden by the settings in `~/.dddinit'.
 
 
 DDD 1.4d
